Fixing alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3631,9 +3631,9 @@ input, select, textarea {
 			display: inline-block;
 			color: white;
 			text-align: center;
-			padding: 10px 5px; /* Adjust padding as needed */
+			padding: 3px 3px; /* Adjust padding as needed */
 			text-decoration: none;
-			font-size: 17px;
+			font-size: 14px;
 			border-bottom: none;
 		}
 
@@ -3669,14 +3669,14 @@ input, select, textarea {
 
 		#navbar ul li {
 			display: inline-block; /* Keep list items horizontal */
-			margin: 0 5px; /* Adjust margin for spacing */
+			margin: 0 3px; /* Adjust margin for spacing */
 		}
 
 		#navbar ul li a {
 			display: inline-block;
 			color: white;
 			text-align: center;
-			padding: 5px 5px; /* Adjust padding as needed */
+			padding: 3px 3px; /* Adjust padding as needed */
 			text-decoration: none;
 			font-size: 14px;
 			border-bottom: none;
